// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AddExpenseForm Add Expense 1`] = `
.emotion-4 {
  padding: 0rem 0rem !important;
  margin: 0rem 0.2rem 0rem 1rem !important;
}

.emotion-0 {
  margin: 0.1rem 0.1rem 0.1rem 0.1rem !important;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  margin: 0.1rem 0.1rem 0.1rem 0.1rem !important;
  min-width: 11rem !important;
}

.emotion-2 {
  margin: 0.1rem 0.1rem 0.1rem 0.1rem !important;
  min-width: 9rem !important;
}

.emotion-5 {
  padding: 0rem 0rem !important;
  margin: 0rem 1rem 0rem 0.2rem !important;
}

<div
  className="ui equal width grid"
>
  <div
    className="stretched row"
  >
    <div
      className="twelve wide column emotion-4"
    >
      <div
        className="ui left icon input emotion-0"
      >
        <input
          onChange={[Function]}
          placeholder="Expense"
          type="text"
          value=""
        />
        <i
          aria-hidden="true"
          className="jpy icon"
          onClick={[Function]}
        />
      </div>
      <div
        className="emotion-3"
      >
        <div
          aria-expanded={false}
          className="ui button fluid labeled selection dropdown icon emotion-1"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          role="listbox"
          tabIndex={0}
        >
          <div
            aria-atomic={true}
            aria-live="polite"
            className="text"
            role="alert"
          >
            2020/08/17
          </div>
          <i
            aria-hidden="true"
            className="calendar alternate outline icon"
            onClick={[Function]}
          />
          <div
            className="menu transition"
          >
            <div
              aria-checked={false}
              aria-selected={true}
              className="selected item"
              onClick={[Function]}
              role="option"
              style={
                Object {
                  "pointerEvents": "all",
                }
              }
            >
              <span
                className="text"
              >
                Date
              </span>
            </div>
          </div>
        </div>
        <div
          aria-expanded={false}
          className="ui button fluid labeled selection dropdown icon emotion-2"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          role="listbox"
          tabIndex={0}
        >
          <div
            aria-atomic={true}
            aria-live="polite"
            className="text"
            role="alert"
          />
          <i
            aria-hidden="true"
            className="tag icon"
            onClick={[Function]}
          />
          <div
            className="menu transition"
          >
            <div
              aria-checked={false}
              aria-selected={true}
              className="selected item"
              color="#838383"
              colorLabel="grey"
              onClick={[Function]}
              role="option"
              style={
                Object {
                  "pointerEvents": "all",
                }
              }
            >
              <i
                aria-hidden="true"
                className="tag icon"
                onClick={[Function]}
              />
              <span
                className="text"
              >
                その他
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="column emotion-5"
    >
      <button
        className="ui teal disabled button"
        data-test-id="add-expense"
        disabled={true}
        onClick={[Function]}
        tabIndex={-1}
      >
        Submit
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Contact Contact 1`] = `
<div
  className="ui container"
>
  <div
    className="ui basic segment"
  >
    <div
      className="ui header"
    >
      ぜひご意見をお寄せください。
    </div>
    <form
      className="ui form"
      onSubmit={[Function]}
    >
      <div
        className="field"
      >
        <textarea
          aria-describedby={null}
          onChange={[Function]}
          onInput={[Function]}
          placeholder="Please give me your feedback."
          rows={9}
          value=""
        />
      </div>
      <div
        className="field"
      >
        <button
          aria-describedby={null}
          className="ui teal circular button"
          onClick={[Function]}
        >
          送信
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Detail Detail 1`] = `
.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  margin: 0.2rem 0.2rem !important;
}

<div
  className="ui equal width grid"
>
  <div
    className="stretched row"
  >
    <div
      className="eleven wide column"
    >
      <div
        className="emotion-3"
      >
        <button
          className="ui grey large basic fluid button emotion-0"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="tag icon"
            onClick={[Function]}
          />
          ¥ 1000
        </button>
        <button
          className="ui teal large basic fluid button emotion-0"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="food icon"
            onClick={[Function]}
          />
          ¥ 2000
        </button>
        <button
          className="ui violet large basic fluid button emotion-0"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="home icon"
            onClick={[Function]}
          />
          ¥ 3000
        </button>
      </div>
      <div
        className="emotion-3"
      >
        <button
          className="ui yellow large basic fluid button emotion-0"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="power cord icon"
            onClick={[Function]}
          />
          ¥ 1000
        </button>
        <button
          className="ui blue large basic fluid button emotion-0"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="bath icon"
            onClick={[Function]}
          />
          ¥ 2000
        </button>
        <button
          className="ui red large basic fluid button emotion-0"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="fire icon"
            onClick={[Function]}
          />
          ¥ 3000
        </button>
      </div>
      <div
        className="emotion-3"
      >
        <button
          className="ui orange large basic fluid button emotion-0"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="phone icon"
            onClick={[Function]}
          />
          ¥ 1000
        </button>
        <button
          className="ui green large basic fluid button emotion-0"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="subway icon"
            onClick={[Function]}
          />
          ¥ 2000
        </button>
      </div>
    </div>
    <div
      className="middle aligned five wide column"
    >
      <div
        className="ui teal inverted center aligned segment"
      >
        <div
          className="ui header"
        >
          Total Expenses
        </div>
        <div
          className="ui huge header"
        >
          ¥
          15000
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ExpenseBarChart Expense Bar Chart 1`] = `
<div>
  <div
    className="recharts-responsive-container"
    style={
      Object {
        "height": 300,
        "maxHeight": undefined,
        "minHeight": undefined,
        "minWidth": undefined,
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "display": "none",
          "height": 0,
          "position": "absolute",
          "visibility": "hidden",
          "width": 0,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots ExpensePieChart Expense Pie Chart 1`] = `
<div>
  <div
    className="recharts-responsive-container"
    style={
      Object {
        "height": 300,
        "maxHeight": undefined,
        "minHeight": undefined,
        "minWidth": undefined,
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "display": "none",
          "height": 0,
          "position": "absolute",
          "visibility": "hidden",
          "width": 0,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots InputFile Input File 1`] = `
.emotion-5 {
  padding: 0rem 0rem !important;
  margin: 0rem 0.2rem 0rem 1rem !important;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  margin: 0.1rem 0.1rem 0.1rem 0.1rem !important;
  min-width: 19rem;
}

.emotion-3 {
  padding: 0rem 0rem !important;
  margin: 0.1rem 0.1rem 0.1rem 0.1rem !important;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.9rem 1rem;
}

.emotion-2:hover {
  cursor: pointer;
}

.emotion-1 {
  display: none;
}

.emotion-6 {
  padding: 0rem 0rem !important;
  margin: 0rem 1rem 0rem 0.2rem !important;
}

<div
  className="ui equal width grid"
>
  <div
    className="stretched row"
  >
    <div
      className="twelve wide column emotion-5"
    >
      <div
        className="emotion-4"
      >
        <div
          className="ui left icon input emotion-0"
        >
          <input
            onChange={[Function]}
            type="text"
            value="File name"
          />
          <i
            aria-hidden="true"
            className="file image outline icon"
            onClick={[Function]}
          />
        </div>
        <button
          className="ui teal basic fluid button emotion-3"
          onClick={[Function]}
        >
          <label
            className="emotion-2"
            htmlFor="selectFile"
          >
            Select
            <input
              accept="image/*"
              className="emotion-1"
              id="selectFile"
              onChange={[Function]}
              type="file"
            />
          </label>
        </button>
      </div>
    </div>
    <div
      className="column emotion-6"
    >
      <button
        className="ui teal disabled button"
        disabled={true}
        onClick={[Function]}
        tabIndex={-1}
      >
        Submit
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout Layout 1`] = `
.emotion-1 {
  padding: 0.1rem !important;
}

.emotion-0 {
  font-family: 'Lexend Peta',sans-serif;
  font-size: 2rem !important;
  color: #fff;
  padding: 0 !important;
  margin: 0.5rem 1.5rem !important;
}

.emotion-2 {
  padding: 0rem 0rem !important;
}

.emotion-5 {
  margin-top: 2rem !important;
}

.emotion-4 {
  padding-top: 0.5rem;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-flex-direction: column !important;
  -ms-flex-direction: column !important;
  flex-direction: column !important;
  min-height: 100vh !important;
}

.emotion-3 {
  margin-top: auto;
  text-align: center;
  padding: 1.5rem 0;
}

<div>
  <div
    className="ui container"
  >
    <div
      className="ui teal inverted secondary top fixed menu"
    >
      <a
        className="item emotion-1"
        onClick={[Function]}
      >
        <div
          className="ui basic segment emotion-0"
        >
          VisiBO
        </div>
      </a>
      <a
        className="active item"
        onClick={[Function]}
      >
        Home
      </a>
      <a
        className="item"
        onClick={[Function]}
      >
        Contact
      </a>
      <a
        className="right item emotion-2"
        onClick={[Function]}
      >
        <div
          className="ui basic segment"
        >
          Log in
        </div>
      </a>
    </div>
  </div>
  <div
    className="ui basic segment pushable emotion-5"
  >
    <div
      className="ui vertical ui overlay right thin sidebar menu"
    >
      <a
        className="active item"
        onClick={[Function]}
      >
        Home
        <i
          aria-hidden="true"
          className="home icon"
          onClick={[Function]}
        />
      </a>
      <a
        className="item"
        onClick={[Function]}
      >
        Contact
        <i
          aria-hidden="true"
          className="gamepad icon"
          onClick={[Function]}
        />
      </a>
      <a
        className="right item"
        onClick={[Function]}
      >
        Log in
        <i
          aria-hidden="true"
          className="user icon"
          onClick={[Function]}
        />
      </a>
    </div>
    <div
      className="pusher emotion-4"
    >
      <div
        className="ui basic loading vertical segment"
      />
      <div
        className="emotion-3"
      >
        <div
          className="ui divider"
        />
        <h4>
          Copyright © 2020 kozukata1993 All Rights Reserved.
        </h4>
        <a
          href="/terms"
          onClick={[Function]}
        >
          利用規約
        </a>
         / 
        <a
          href="/policy"
          onClick={[Function]}
        >
          プライバシーポリシー
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots LoginForm Login Form 1`] = `
.emotion-0 {
  margin-bottom: 1rem !important;
}

<div
  className="ui center aligned middle aligned grid"
>
  <div
    className="four wide column"
    style={
      Object {
        "minWidth": 350,
      }
    }
  >
    <h2
      className="ui teal center aligned header"
    >
      Log in
    </h2>
    <form
      className="ui form"
      onSubmit={[Function]}
    >
      <div
        className="required field"
      >
        <div
          className="field"
        >
          <div
            className="ui fluid left icon input"
          >
            <input
              aria-describedby={null}
              onChange={[Function]}
              placeholder="E-mail address"
              type="text"
            />
            <i
              aria-hidden="true"
              className="at icon"
              onClick={[Function]}
            />
          </div>
        </div>
        <div
          className="field"
        >
          <div
            className="ui fluid left icon input"
          >
            <input
              aria-describedby={null}
              onChange={[Function]}
              placeholder="Password"
              type="password"
            />
            <i
              aria-hidden="true"
              className="lock icon"
              onClick={[Function]}
            />
          </div>
        </div>
        <button
          className="ui teal circular fluid button"
          onClick={[Function]}
        >
          Log in
        </button>
      </div>
    </form>
    <div
      className="ui horizontal section divider"
    >
      or
    </div>
    <button
      className="ui google plus circular fluid button emotion-0"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="google icon"
        onClick={[Function]}
      />
      Google でログイン
    </button>
    <button
      className="ui twitter circular fluid button emotion-0"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="twitter icon"
        onClick={[Function]}
      />
      Twitter でログイン
    </button>
    <button
      className="ui grey circular fluid button emotion-0"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="user icon"
        onClick={[Function]}
      />
      ゲスト でログイン
    </button>
  </div>
</div>
`;

exports[`Storyshots MyTable My Table 1`] = `
<table
  className="ui table"
>
  <tbody
    className=""
  >
    <table
      className="ui very basic table"
      data-test-id="expense-table"
    >
      <thead
        className=""
      >
        <tr
          className=""
        >
          <th
            className="three wide"
          >
            Date
          </th>
          <th
            className="three wide"
          >
            Amount
          </th>
          <th
            className="four wide"
          >
            Tag
          </th>
          <th
            className="six wide"
          >
            Action
          </th>
        </tr>
      </thead>
      <tbody
        className=""
      >
        <tr
          className=""
        >
          <td
            className=""
          >
            2020/1/1
          </td>
          <td
            className=""
          >
            1000
          </td>
          <td
            className=""
          >
            <div
              className="ui teal large basic label"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="food icon"
                onClick={[Function]}
              />
              食費
            </div>
          </td>
          <td
            className=""
          >
            <button
              className="ui teal basic circular button"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="edit icon"
                onClick={[Function]}
              />
              Edit
            </button>
            <button
              className="ui red basic circular button"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="trash icon"
                onClick={[Function]}
              />
              Delete
            </button>
          </td>
        </tr>
        <tr
          className=""
        >
          <td
            className=""
          >
            2020/1/2
          </td>
          <td
            className=""
          >
            2000
          </td>
          <td
            className=""
          >
            <div
              className="ui yellow large basic label"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="power cord icon"
                onClick={[Function]}
              />
              電気代
            </div>
          </td>
          <td
            className=""
          >
            <button
              className="ui teal basic circular button"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="edit icon"
                onClick={[Function]}
              />
              Edit
            </button>
            <button
              className="ui red basic circular button"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="trash icon"
                onClick={[Function]}
              />
              Delete
            </button>
          </td>
        </tr>
        <tr
          className=""
        >
          <td
            className=""
          >
            2020/1/3
          </td>
          <td
            className=""
          >
            3000
          </td>
          <td
            className=""
          >
            <div
              className="ui red large basic label"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="fire icon"
                onClick={[Function]}
              />
              ガス代
            </div>
          </td>
          <td
            className=""
          >
            <button
              className="ui teal basic circular button"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="edit icon"
                onClick={[Function]}
              />
              Edit
            </button>
            <button
              className="ui red basic circular button"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="trash icon"
                onClick={[Function]}
              />
              Delete
            </button>
          </td>
        </tr>
        <tr
          className=""
        >
          <td
            className=""
          >
            2020/1/4
          </td>
          <td
            className=""
          >
            4000
          </td>
          <td
            className=""
          >
            <div
              className="ui blue large basic label"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="bath icon"
                onClick={[Function]}
              />
              水道代
            </div>
          </td>
          <td
            className=""
          >
            <button
              className="ui teal basic circular button"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="edit icon"
                onClick={[Function]}
              />
              Edit
            </button>
            <button
              className="ui red basic circular button"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="trash icon"
                onClick={[Function]}
              />
              Delete
            </button>
          </td>
        </tr>
        <tr
          className=""
        >
          <td
            className=""
          >
            2020/1/5
          </td>
          <td
            className=""
          >
            5000
          </td>
          <td
            className=""
          >
            <div
              className="ui violet large basic label"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="home icon"
                onClick={[Function]}
              />
              家賃
            </div>
          </td>
          <td
            className=""
          >
            <button
              className="ui teal basic circular button"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="edit icon"
                onClick={[Function]}
              />
              Edit
            </button>
            <button
              className="ui red basic circular button"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="trash icon"
                onClick={[Function]}
              />
              Delete
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </tbody>
</table>
`;
